--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -182,9 +182,9 @@
 						</li>
 					</ul>
 				</div>
-				<div class="benefits__text-block">
-					<div class="benefits__title">Only practicing tutors</div>
+				<div class="benefits__column">
 					<div class="benefits__text">
+						<div class="benefits__title">Only practicing tutors</div>
 						<p>
 							Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse. Morbi mauris
 							cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit diam mi amet massa.
