--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
@@ -74,7 +74,7 @@
 				</div>
 				<div class="why__text-block">
 					<div class="why__subtitle subtitle">Who we are</div>
-					<div class="why__title title">Why Createx?</div>
+					<h2 class="why__title title">Why Createx?</h2>
 					<ul class="why__list">
 						<li>A fermentum in morbi pretium aliquam adipiscing donec tempus.</li>
 						<li>Vulputate placerat amet pulvinar lorem nisl.</li>
@@ -90,7 +90,7 @@
 			</section>
 			<section class="courses">
 				<div class="courses__subtitle subtitle">Ready to learn?</div>
-				<div class="courses__title title">Featured Courses</div>
+				<h2 class="courses__title title">Featured Courses</h2>
 				<div class="courses__btn btn-white">
 					<a href="">View all courses</a>
 				</div>
@@ -163,9 +163,9 @@
 				<div class="benefits__subtitle subtitle">
 					Our benefits
 				</div>
-				<div class="benefits__title title">
+				<h2 class="benefits__title title">
 					That’s how we do it
-				</div>
+				</h2>
 				<div class="benefits__tabs">
 					<ul>
 						<li>
