--- a/lesson_13/index.html
+++ b/lesson_13/index.html
@@ -19,7 +19,7 @@
 					<span>circle</span>
 				</div>
 				<div class="block__item">
-					<a href="animation.html">link: home work</a>
+					<a href="animation.html">kapitoshka</a>
 				</div>
 			</div>
 		</div>
