--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -106,7 +106,7 @@
 						</div>
 						<div class="why__items items">
 							<div class="items__subtitle">Who we are</div>
-							<div class="items__title">Why Createx?</div>
+							<h2 class="items__title">Why Createx?</h2>
 							<ul class="items__item">
 								<li>A fermentum in morbi pretium aliquam adipiscing donec tempus.</li>
 								<li>Vulputate placerat amet pulvinar lorem nisl.</li>
@@ -114,7 +114,8 @@
 								<li>Etiam duis lobortis in fames ultrices commodo nibh.</li>
 								<li>Tincidunt sagittis neque sem ac eget.</li>
 								<li>Ultricies amet justo et eget quisque purus vulputate dapibus tortor.</li>
-								<a href="" class="items__btn button"><span>More about us</span></a>
+							</ul>
+							<a href="" class="items__btn button"><span>More about us</span></a>
 						</div>
 					</div>
 					<div class="why__decor decor-why">
