--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -41,13 +41,11 @@
 					<div class="createx__column">
 						<div class="createx__content content">
 							<a href="" class="content__play">Play showreel</a>
-							<div class="content__title">
-								<h1>
-									Enjoy studying with Createx Online Courses
-								</h1>
-							</div>
+							<h1 class="content__title">
+								Enjoy studying with Createx Online Courses
+							</h1>
 							<div class="content__action">
-								<a href="" class="content__button button button--opacity"><span>About us</span></a>
+								<a href="" class="content__button buttons">About us</a>
 								<a href="" class="content__button button"><span>Explore courses</span></a>
 							</div>
 						</div>
@@ -78,24 +76,12 @@
 					</div>
 				</div>
 				<div class="createx__decor decor">
-					<ul>
-						<li class="decor__icon decor__icon--1"></li>
-					</ul>
-					<ul>
-						<li class="decor__icon decor__icon--2"></li>
-					</ul>
-					<ul>
-						<li class="decor__icon decor__icon--3"></li>
-					</ul>
-					<ul>
-						<li class="decor__icon decor__icon--4"></li>
-					</ul>
-					<ul>
-						<li class="decor__icon decor__icon--5"></li>
-					</ul>
-					<ul>
-						<li class="decor__icon decor__icon--6"></li>
-					</ul>
+					<div class="decor__icon decor__icon--1"></div>
+					<div class="decor__icon decor__icon--2"></div>
+					<div class="decor__icon decor__icon--3"></div>
+					<div class="decor__icon decor__icon--4"></div>
+					<div class="decor__icon decor__icon--5"></div>
+					<div class="decor__icon decor__icon--6"></div>
 				</div>
 			</section>
 			<section class="why">
@@ -115,13 +101,13 @@
 								<li>Tincidunt sagittis neque sem ac eget.</li>
 								<li>Ultricies amet justo et eget quisque purus vulputate dapibus tortor.</li>
 							</ul>
-							<a href="" class="items__btn button"><span>More about us</span></a>
+							<a href="" class="button"><span>Get consultation</span></a>
 						</div>
 					</div>
-					<div class="why__decor decor-why">
-						<div class="decor-why__icon decor-why__icon--1"></div>
-						<div class="decor-why__icon decor-why__icon--2"></div>
-					</div>
+				</div>
+				<div class="why__decor decor-why">
+					<div class="decor-why__icon decor-why__icon--1"></div>
+					<div class="decor-why__icon decor-why__icon--2"></div>
 				</div>
 			</section>
 		</main>
