--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -68,37 +68,37 @@
 					<div class="form__title">Your age</div>
 					<div class="form__input-radio">
 						<input class="form__input form__input--radio" type="radio" name="age" id="age-1" required
-							autocomplete="off" value="18-20">
+							value="18-20">
 						<label lass="form__label" for="age-1">18-20</label>
 					</div>
 					<div class="form__radio">
 						<input class="form__input form__input--radio" type="radio" checked name="age" id="age-2" required
-							autocomplete="off" value="21-30">
-						<label lass="form__label" for="age-2">21-30</label>
+							value="21-30">
+						<label class="form__label" for="age-2">21-30</label>
 					</div>
 					<div class="form__radio">
 						<input class="form__input form__input--radio" type="radio" name="age" id="age-3" required
-							autocomplete="off" value="30-40">
-						<label lass="form__label" for="age-3">30-40</label>
+							value="30-40">
+						<label class="form__label" for="age-3">30-40</label>
 					</div>
 				</div>
 
 				<div class="form__line">
 					<div class="form__title">What languages do you know?</div>
 					<div class="form__chec">
-						<input class="form__input form__input--checkbox" type="checkbox" name="language" id="languag-1"
-							autocomplete="off" value="Ukrainian">
-						<label lass="form__label" for="language-1">Ukrainian</label>
+						<input class="form__input form__input--checkbox" type="checkbox" name="language" id="language-1"
+							avalue="Ukrainian">
+						<label class="form__label" for="language-1">Ukrainian</label>
 					</div>
 					<div class="form__chec">
-						<input class="form__input form__input--checkbox" type="checkbox" name="language" id="languag-2"
-							autocomplete="off" value="English">
-						<label lass="form__label" for="language-2">English</label>
+						<input class="form__input form__input--checkbox" type="checkbox" name="language" id="language-2"
+							value="English">
+						<label class="form__label" for="language-2">English</label>
 					</div>
 					<div class="form__chec">
-						<input class="form__input form__input--checkbox" type="checkbox" name="language" id="languag-3"
-							autocomplete="off" value="Polish">
-						<label lass="form__label" for="language-3">Polish</label>
+						<input class="form__input form__input--checkbox" type="checkbox" name="language" id="language-3"
+							value="Polish">
+						<label class="form__label" for="language-3">Polish</label>
 					</div>
 				</div>
 
@@ -119,8 +119,7 @@
 
 				<div class="form__line">
 					<label class="form__label" for="color">Color</label>
-					<input class="form__color" type="color" name="color" id="color" required autocomplete="off"
-						value="#ffffff">
+					<input class="form__color" type="color" name="color" id="color" value="#ffffff">
 				</div>
 
 				<div class="form__line">
