--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -69,7 +69,7 @@
 					<div class="form__input-radio">
 						<input class="form__input form__input--radio" type="radio" name="age" id="age-1" required
 							value="18-20">
-						<label lass="form__label" for="age-1">18-20</label>
+						<label class="form__label" for="age-1">18-20</label>
 					</div>
 					<div class="form__radio">
 						<input class="form__input form__input--radio" type="radio" checked name="age" id="age-2" required
@@ -87,7 +87,7 @@
 					<div class="form__title">What languages do you know?</div>
 					<div class="form__chec">
 						<input class="form__input form__input--checkbox" type="checkbox" name="language" id="language-1"
-							avalue="Ukrainian">
+							value="Ukrainian">
 						<label class="form__label" for="language-1">Ukrainian</label>
 					</div>
 					<div class="form__chec">
