--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -28,7 +28,7 @@
 								<li class="menu__item"><a href="#why" class="menu__link">About Us</a></li>
 							</ul>
 							<ul class="menu__list">
-								<li class="menu__item"><a href="" class="menu__link">Courses</a></li>
+								<li class="menu__item"><a href="#courses" class="menu__link">Courses</a></li>
 							</ul>
 							<ul class="menu__list">
 								<li class="menu__item"><a href="" class="menu__link">Events</a></li>
@@ -124,7 +124,7 @@
 					<div class="decor-why__icon decor-why__icon--2"></div>
 				</div>
 			</section>
-			<section class="courses">
+			<section id="courses" class="courses">
 				<div class="courses__container">
 					<div class="courses__content">
 						<div class="courses__item">
