--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -132,7 +132,7 @@
 								<div class="head__subtitle subtitle">Ready to learn?</div>
 								<h2 class="head__title title">Featured Courses</h2>
 							</div>
-							<div action__btn>
+							<div class="action__btn">
 								<button type="submit" class="button button--opacity"><span>View all
 										courses</span></button>
 							</div>
