--- a/lesson_20/index.html
+++ b/lesson_20/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221124215445">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221124222232">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -371,7 +371,7 @@
 										<div class="swiper-slide__social">
 											<a href="" class="swiper-slide__icon _icon-fb"></a>
 											<a href="" class="swiper-slide__icon _icon-insta"></a>
-											<a href="" div class="swiper-slide__icon _icon-linked"></a>
+											<a href="" class="swiper-slide__icon _icon-linked"></a>
 										</div>
 									</div>
 									<div class="swiper-slide__info">
@@ -581,7 +581,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20221124215445"></script>
+	<script src="js/app.min.js?_v=20221124222232"></script>
 </body>
 
 </html>
