--- a/lesson_22/index.html
+++ b/lesson_22/index.html
@@ -29,9 +29,8 @@
 				</div>
 				<div class="task__two">
 					<h2>Завдання №2 (Змінні в JAVASCRIPT. Константи. Ключові слова LET CONST VAR.)</h2>
-					<p><mark>Варіант №1 записаний не вірно</mark> - немає коми між оголошення змінних, а також символу ";"
-						після інструкції. Хоча відсутність ";" помилки не визве, але їх рекомендовано ставити після кожної
-						інструкції.</p>
+					<p><mark>Варіант №1 записаний не вірно</mark> - немає ";" між оголошенням змінних, що визве помилку в
+						консолі.</p>
 					<p><mark>Варіант №3 не вірно</mark> - таким чином оголошується константа, яка вже відома до початку
 						вонання скрипту, тому логічно вона не може визначатися арифметичною дією.</p>
 				</div>
