--- a/lesson_22/index.html
+++ b/lesson_22/index.html
@@ -31,15 +31,19 @@
 					<h2>Завдання №2 (Змінні в JAVASCRIPT. Константи. Ключові слова LET CONST VAR.)</h2>
 					<p><mark>Варіант №1 записаний не вірно</mark> - немає ";" між оголошенням змінних, що визве помилку в
 						консолі.</p>
-					<p><mark>Варіант №3 не вірно</mark> - таким чином оголошується константа, яка вже відома до початку
+					<p><mark>Варіант №3 записаний не вірно</mark> - таким чином оголошується константа, яка вже відома до
+						початку
 						вонання скрипту, тому логічно вона не може визначатися арифметичною дією.</p>
 				</div>
 				<div class="task__three">
 					<h2>Завдання №3 (Null String Undefined Boolean Number)</h2>
-					<p><mark>Варіант №1 не вірний</mark> - при такому записі в консоль виведеться ім'я змінної userAge, для
+					<p><mark>Варіант №1 записаний не вірно</mark> - при такому записі в консоль виведеться ім'я змінної
+						userAge, для
 						виводу значення змінної userAge потрібно поставити зворотні лапки "``".</p>
-					<p><mark>Варіант №2 не вірний</mark> - значення буде Infinity, так як діленняна 0 дає нескінченність.</p>
-					<p><mark>Варіант №3 не вірний</mark> - тип даних буде undefined, так як змінній не присвоєне ніяке
+					<p><mark>Варіант №2 записаний не вірно</mark> - значення буде Infinity, так як діленняна 0 дає
+						нескінченність.</p>
+					<p><mark>Варіант №3 записаний не вірно</mark> - тип даних буде undefined, так як змінній не присвоєне
+						ніяке
 						значення.</p>
 				</div>
 			</div>
