--- a/lesson_24/index.html
+++ b/lesson_24/index.html
@@ -54,7 +54,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="/js/script.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
