--- a/lesson_25/index.html
+++ b/lesson_25/index.html
@@ -19,7 +19,7 @@
 					<div class="search__field">
 						<input autocomplete="off" maxlength="40" type="text" placeholder="Пошуковий запит"
 							class="search__input">
-						<div class="search__limit" for="">Залишилося <span></span> символів для вводу</div>
+						<div class="search__limit">Залишилося <span></span> символів для вводу</div>
 					</div>
 					<button class="search__btn" type="submit">Знайти</button>
 				</div>
