--- a/matoa/home.html
+++ b/matoa/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221216205347">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221217194954">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,13 +38,71 @@
 			</div>
 		</header>
 		<main class="page">
-		</main>
-		<footer class="footer">
-			<div class="footer__container">
-				<div class="footer__column">
-					<div class="footer__logo">
-						<picture><source srcset="img/footer/logo.webp" type="image/webp"><img src="img/footer/logo.png" alt="logo"></picture>
+			<div class="page__main-slider main-slider">
+				<div class="main-slider__container">
+					<!-- Оболочка слайдера -->
+					<div class="main-slider__slider swiper">
+						<!-- Двигающееся часть слайдера -->
+						<div class="main-slider__wrapper swiper-wrapper">
+							<!-- Слайд -->
+							<div class="main-slider__slide slide-main swiper-slide">
+								<div class="slide-main__image-ibg_contain">
+									<picture><source srcset="img/main-slider/clock.webp" type="image/webp"><img src="img/main-slider/clock.png" alt="image"></picture>
+								</div>
+								<div class="slide-main__content">
+									<h2 class="slide-main__title title">WAY KAMBAS MINI EBONY</h2>
+									<div class="slide-main__text">MATOA Way Kambas - This wood is chosen to represent the
+										Sumatran Rhino's skin which is designed with an overlap effect on its strap to represent
+										Rhino's skin.</div>
+									<a href="" class="slide-main__link">Discover</a>
+									<div class="slide-main__action">
+										<button type="button" class="button button--cart-plus"><span class="_icon-cart-plus">Add
+												to
+												cart</span></button>
+										<button type="button" class="slide-main__btn opacity-button opacity-button--cicil">
+											<picture><source srcset="img/cicil.webp" type="image/webp"><img src="img/cicil.png" alt="cicil"></picture></button>
+									</div>
+								</div>
+							</div>
+							<div class="main-slider__slide slide-main swiper-slide">
+								<div class="slide-main__image-ibg_contain">
+									<picture><source srcset="img/main-slider/clock.webp" type="image/webp"><img src="img/main-slider/clock.png" alt="image"></picture>
+								</div>
+								<div class="slide-main__content">
+									<h2 class="slide-main__title title">WAY KAMBAS MINI EBONY</h2>
+									<div class="slide-main__text">MATOA Way Kambas - This wood is chosen to represent the
+										Sumatran Rhino's skin which is designed with an overlap effect on its strap to represent
+										Rhino's skin.</div>
+									<a href="" class="slide-main__link">Discover</a>
+									<div class="slide-main__action">
+										<button type="button" class="button button--cart-plus"><span class="_icon-cart-plus">Add
+												to
+												cart</span></button>
+										<button type="button" class="slide-main__btn opacity-button opacity-button--cicil">
+											<picture><source srcset="img/cicil.webp" type="image/webp"><img src="img/cicil.png" alt="cicil"></picture></button>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="main-slider__arrows">
+							<button type="button" class="main-slider__arrow swiper-button-prev _icon-arrow"></button>
+							<button type="button" class="main-slider__arrow swiper-button-next _icon-arrow"></button>
+						</div>
 					</div>
+				</div>
+				<!-- Если нужна навигация (влево/вправо) -->
+
+			</div>
+	</div>
+	</div>
+	</main>
+	<footer class="footer">
+		<div data-spollers="768, max" class="footer__container">
+			<div class="footer__column">
+				<a href="" class="footer__logo">
+					<picture><source srcset="img/footer/logo.webp" type="image/webp"><img src="img/footer/logo.png" alt="logo"></picture>
+				</a>
+				<div class="footer__block">
 					<div class="footer__label">
 						<h3 class="footer__title title-footer">Address</h3>
 						<div class="footer__text">
@@ -55,26 +113,62 @@
 						</div>
 					</div>
 					<div class="footer__label">
-						<h3 class="footer__title title-footer">Office Hour
-					</div>
-					<div class="footer__text">
-						<p>Monday - Sunday </p>
-						<p>10.00 - 18.00</p>
-					</div>
-				</div>
-				<div class="footer__column">
-					<div class="footer__title title title--white">Get in touch</div>
-					<div class="footer__contact contact-footer">
-						<div class="contact-footer__label">Phone</div>
-						<a href="02220277564" class="contact-footer__value">022-20277564</a>
-						<div class="contact-footer__label">Service Center</div>
-						<a href="08112338899" class="contact-footer__value">0811-233-8899</a>
-						<div class="contact-footer__label">Customer Service</div>
-						<a href="08112359988" class="contact-footer__value">0811-235-9988</a>
+						<h3 class="footer__title title-footer">Office Hour</h3>
+						<div class="footer__text">
+							<p>Monday - Sunday </p>
+							<p>10.00 - 18.00</p>
+						</div>
 					</div>
 				</div>
 			</div>
-	</div>
+			<div class="footer__column">
+				<button type="button" data-spoller class="footer__item title title--white _icon-select">Get in touch</button>
+				<div class="footer__contact-block">
+					<div class="footer__contact contact-footer">
+						<div class="contact-footer__label title-footer">Phone</div>
+						<a href="02220277564" class="contact-footer__value">0222-027-7564</a>
+						<div class="contact-footer__label title-footer">Service Center</div>
+						<a href="08112338899" class="contact-footer__value">0811-233-8899</a>
+						<div class="contact-footer__label title-footer">Customer Service</div>
+						<a href="08112359988" class="contact-footer__value">0811-235-9988</a>
+						<div class="footer__social">
+							<a href="" class="_icon-facebook"></a>
+							<a href="" class="_icon-instagram"></a>
+							<a href="" class="_icon-twitter"></a>
+							<a href="" class="_icon-youtube"></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="footer__column">
+				<button type="button" data-spoller class="footer__item title title--white _icon-select">Useful Link</button>
+				<nav class="footer__menu menu-footer">
+					<ul class="menu-footer__list">
+						<li class="menu-footer__item"><a href="" class="menu-footer__link">Warranty & Complaints</a></li>
+						<li class="menu-footer__item"><a href="" class="menu-footer__link">Order & Shipping</a></li>
+						<li class="menu-footer__item"><a href="" class="menu-footer__link">Tracking Order</a></li>
+						<li class="menu-footer__item"><a href="" class="menu-footer__link">About Us</a></li>
+						<li class="menu-footer__item"><a href="" class="menu-footer__link">Repair</a></li>
+						<li class="menu-footer__item"><a href="" class="menu-footer__link">Terms</a></li>
+						<li class="menu-footer__item"><a href="" class="menu-footer__link">FAQ</a></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="footer__column">
+				<button type="button" data-spoller class="footer__item title title--white _icon-select">Useful Link</button>
+				<nav class="footer__menu menu-footer">
+					<ul class="menu-footer__list">
+						<li class="menu-footer__item"><a href="" class="menu-footer__link">Mengenal Arti Cukup</a></li>
+						<li class="menu-footer__item"><a href="" class="menu-footer__link">Tell Your Difference</a></li>
+						<li class="menu-footer__item"><a href="" class="menu-footer__link">Waykambas</a></li>
+						<li class="menu-footer__item"><a href="" class="menu-footer__link">Rebrand</a></li>
+						<li class="menu-footer__item"><a href="" class="menu-footer__link">Gallery</a></li>
+						<li class="menu-footer__item"><a href="" class="menu-footer__link">Singo</a></li>
+						<li class="menu-footer__item"><a href="" class="menu-footer__link">Rakai</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
 	</footer>
 	</div>
 	<div id="search" aria-hidden="true" class="popup">
@@ -90,7 +184,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20221216205347"></script>
+	<script src="js/app.min.js?_v=20221217194954"></script>
 </body>
 
 </html>
