--- a/matoa/home.html
+++ b/matoa/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221217194954">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221218162635">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
 
 <body>
 	<div class="wrapper">
-		<header class="header">
+		<header class="header" data-lp>
 			<div class="header__container">
 				<div class="header__logo">
 					<a href="#"><picture><source srcset="img/logo.webp" type="image/webp"><img src="img/logo.png" alt="logo"></picture></a>
@@ -46,33 +46,41 @@
 						<div class="main-slider__wrapper swiper-wrapper">
 							<!-- Слайд -->
 							<div class="main-slider__slide slide-main swiper-slide">
-								<div class="slide-main__image-ibg_contain">
+								<div data-da=".slide-main__content--1, 767.98, 1" class="slide-main__image-ibg_contain">
 									<picture><source srcset="img/main-slider/clock.webp" type="image/webp"><img src="img/main-slider/clock.png" alt="image"></picture>
 								</div>
-								<div class="slide-main__content">
+								<div class=" slide-main__content slide-main__content--1">
 									<h2 class="slide-main__title title">WAY KAMBAS MINI EBONY</h2>
 									<div class="slide-main__text">MATOA Way Kambas - This wood is chosen to represent the
 										Sumatran Rhino's skin which is designed with an overlap effect on its strap to represent
-										Rhino's skin.</div>
+										Rhino's skin.
+									</div>
 									<a href="" class="slide-main__link">Discover</a>
 									<div class="slide-main__action">
 										<button type="button" class="button button--cart-plus"><span class="_icon-cart-plus">Add
-												to
-												cart</span></button>
+												to cart</span></button>
 										<button type="button" class="slide-main__btn opacity-button opacity-button--cicil">
 											<picture><source srcset="img/cicil.webp" type="image/webp"><img src="img/cicil.png" alt="cicil"></picture></button>
 									</div>
 								</div>
 							</div>
 							<div class="main-slider__slide slide-main swiper-slide">
-								<div class="slide-main__image-ibg_contain">
+								<div data-da=".slide-main__content--2, 767.98, 1" class="slide-main__image-ibg_contain">
 									<picture><source srcset="img/main-slider/clock.webp" type="image/webp"><img src="img/main-slider/clock.png" alt="image"></picture>
 								</div>
-								<div class="slide-main__content">
+								<div class="slide-main__content slide-main__content--2">
 									<h2 class="slide-main__title title">WAY KAMBAS MINI EBONY</h2>
-									<div class="slide-main__text">MATOA Way Kambas - This wood is chosen to represent the
+									<div class="slide-main__text">
+										MATOA Way Kambas - This wood is chosen to represent the
 										Sumatran Rhino's skin which is designed with an overlap effect on its strap to represent
-										Rhino's skin.</div>
+										Rhino's skin.
+										MATOA Way Kambas - This wood is chosen to represent the
+										Sumatran Rhino's skin which is designed with an overlap effect on its strap to represent
+										Rhino's skin.
+										MATOA Way Kambas - This wood is chosen to represent the
+										Sumatran Rhino's skin which is designed with an overlap effect on its strap to represent
+										Rhino's skin.
+									</div>
 									<a href="" class="slide-main__link">Discover</a>
 									<div class="slide-main__action">
 										<button type="button" class="button button--cart-plus"><span class="_icon-cart-plus">Add
@@ -184,7 +192,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20221217194954"></script>
+	<script src="js/app.min.js?_v=20221218162635"></script>
 </body>
 
 </html>
